--- a/src/app/section/section-list-config/section-list-config.component.html
+++ b/src/app/section/section-list-config/section-list-config.component.html
@@ -9,7 +9,7 @@
     </app-error-template>
 </ng-template>
 
-<div class="row pl-0 pr-0 ml-0 mr-0">
+<div class="row pl-0 pr-0 ml-0 mr-0 pt-0 heightThree">
     <div class="col-md-8 col-lg-8 col-sm-8 pr-0 pl-0 mr-0 pr-0">
         <div class="settingsTitle">
             <div class="float-left">
