--- a/src/app/section/section-list/section-list.component.scss
+++ b/src/app/section/section-list/section-list.component.scss
@@ -1,3 +1,21 @@
 .center-pills{
     margin-top: 3px;
 }
+
+.search-table-box{
+    background-color: transparent;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    border-bottom: solid 1px gray;
+}
+
+input.search-table-box:focus {
+    outline-width: 0;
+}
+
+input.search-table-box[type=number]::-webkit-inner-spin-button, 
+input.search-table-box[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
