--- a/src/app/supplier/supplier-list/supplier-list.component.html
+++ b/src/app/supplier/supplier-list/supplier-list.component.html
@@ -21,11 +21,7 @@
         <div class="row pl-0 pr-0 ml-0 mr-0 pt-0 heightThree">
             <div class="col-md-12 col-lg-12 col-sm-12 pl-5 pr-5 pt-4 pb-2 mt-2 text-center">
                 <div class="row">
-                    <div class="form-check">
-                        <input class="form-check-input" mdbInputDirective type="checkbox" id="inactiveSuppliers" name="inactiveSuppliers"
-                            [(ngModel)]="showInactiveSuppliers">
-                        <label class="form-check-label" for="inactiveSuppliers">{{ checkboxText }}</label>
-                    </div>
+                    <mdb-checkbox [(ngModel)]="showInactiveSuppliers" name="inactiveSuppliers">{{ checkboxText }}</mdb-checkbox>
                     <br>
                     <br>
                     <table class="table table-bordered table-hover customTable">
