--- a/src/styles.scss
+++ b/src/styles.scss
@@ -110,6 +110,7 @@ $alternative-color:  #f56a6a !default;
     padding-top:0px;
     padding-left: 0rem;
     padding-right: 0rem;
+    padding-bottom: 0rem;
 }
 
 .customCard{
