--- a/src/app/client-account-transactions/transaction-list/transaction-list.component.html
+++ b/src/app/client-account-transactions/transaction-list/transaction-list.component.html
@@ -39,7 +39,7 @@
                     <span>{{ "Saldo: " + amount }}</span>
                 </div>
                 <div class="row">
-                    <table class="table table-bordered table-hover customTable">
+                    <table class="table table-bordered table-hover customTable" mdbTable #tableEl="mdbTable">
                         <thead class="primary-color customTableText">
                             <tr>
                                 <th>Cliente</th>
@@ -49,13 +49,13 @@
                             </tr>
                         </thead>
                         <tbody class="table-wrapper" *ngIf='filteredTransactions && filteredTransactions.length'>
-                            <tr *ngFor='let transaction of filteredTransactions'>
-                                <td *ngIf='transaction.deleted === false'>{{ transaction.clientName }}</td>
-                                <td *ngIf='transaction.deleted === false'>{{ transaction.date | date:'dd/MM/yy HH:mm'
+                            <tr *ngFor='let transaction of filteredTransactions; let i = index'>
+                                <td *ngIf='(transaction.deleted === false) && (arqueo.closedAt !== undefined) && (i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>{{ transaction.clientName }}</td>
+                                <td *ngIf='(transaction.deleted === false) && (arqueo.closedAt !== undefined) && (i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>{{ transaction.date | date:'dd/MM/yy HH:mm'
                                     }}</td>
-                                <td *ngIf='transaction.deleted === false'>{{ transaction.amount |
+                                <td *ngIf='(transaction.deleted === false) && (arqueo.closedAt !== undefined) && (i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>{{ transaction.amount |
                                     currency:'USD':code:'2.2-2' }}</td>
-                                <td class="align-middle" *ngIf='transaction.deleted === false'>
+                                <td class="align-middle" *ngIf='(transaction.deleted === false) && (arqueo.closedAt !== undefined) && (i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>
                                     <a [routerLink]="['/clients-module/accountTransactions', { outlets: { edit: ['editTransaction', transaction.clientId, transaction._id] } }]"
                                         class="btn btn-yellow btn-sm customButtonText">Detalle</a>
                                     <a (click)="showModalDelete(deleteTemplate, transaction.clientId, transaction._id)"
@@ -63,6 +63,13 @@
                                 </td>
                             </tr>
                         </tbody>
+                        <tfoot class="grey lighten-5 w-100">
+                            <tr>
+                                <td colspan="4">
+                                <mdb-table-pagination [tableEl]="tableEl" [searchDataSource]="filteredTransactions"></mdb-table-pagination>
+                                </td>
+                            </tr>
+                        </tfoot>
                     </table>
                 </div>
             </div>
