--- a/src/app/arqueo-caja/arqueo-caja-list/arqueo-caja-list.component.html
+++ b/src/app/arqueo-caja/arqueo-caja-list/arqueo-caja-list.component.html
@@ -21,7 +21,7 @@
         <div class="row pl-0 pr-0 ml-0 mr-0 pt-0 heightThree">
             <div class="col-md-12 col-lg-12 col-sm-12 pl-5 pr-5 pt-4 pb-2 mt-2 text-center">
                 <div class="row">
-                    <table class="table table-bordered table-hover customTable">
+                    <table class="table table-bordered table-hover customTable"  mdbTable #tableEl="mdbTable">
                         <thead class="primary-color customTableText">
                             <tr>
                                 <th>Hora Apertura</th>
@@ -34,24 +34,31 @@
                             </tr>
                         </thead>
                         <tbody class="table-wrapper" *ngIf='filteredArqueos && filteredArqueos.length'>
-                            <tr *ngFor='let arqueo of filteredArqueos'>
-                                <td>{{ arqueo.createdAt | date:'dd/MM/yy HH:mm' }}</td>
-                                <td>{{ arqueo.closedAt | date:'dd/MM/yy HH:mm' }}</td>
-                                <td>{{ arqueo.cashRegister }}</td>
-                                <td>{{ arqueo.estimatedAmount | currency:'USD':code:'2.2-2' }}</td>
-                                <td *ngIf="arqueo.closedAt === undefined"></td>
-                                <td *ngIf="arqueo.closedAt !== undefined">{{ arqueo.realAmountTotal |
+                            <tr *ngFor='let arqueo of filteredArqueos; let i = index'>
+                                <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>{{ arqueo.createdAt | date:'dd/MM/yy HH:mm' }}</td>
+                                <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>{{ arqueo.closedAt | date:'dd/MM/yy HH:mm' }}</td>
+                                <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>{{ arqueo.cashRegister }}</td>
+                                <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>{{ arqueo.estimatedAmount | currency:'USD':code:'2.2-2' }}</td>
+                                <td *ngIf="(arqueo.closedAt === undefined) && (i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)"></td>
+                                <td *ngIf="(arqueo.closedAt !== undefined) && (i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)">{{ arqueo.realAmountTotal |
                                     currency:'USD':code:'2.2-2' }}</td>
-                                <td *ngIf="arqueo.closedAt === undefined"></td>
-                                <td *ngIf="arqueo.closedAt !== undefined">{{ arqueo.realAmountTotal -
+                                <td *ngIf="(arqueo.closedAt === undefined) && (i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)"></td>
+                                <td *ngIf="(arqueo.closedAt !== undefined) && (i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)">{{ arqueo.realAmountTotal -
                                     arqueo.estimatedAmount | currency:'USD':code:'2.2-2' }}</td>
-                                <td class="align-middle">
+                                <td class="align-middle" *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>
                                     <a [routerLink]="['/sales/cash-counts', { outlets: { edit: ['editCashCount', arqueo._id] } }]"
                                         class="btn btn-yellow btn-sm customButtonText">Editar</a>
                                     <a (click)="showModalDelete(deleteTemplate, arqueo._id)" class="btn btn-red btn-sm">Eliminar</a>
                                 </td>
                             </tr>
                         </tbody>
+                        <tfoot class="grey lighten-5 w-100">
+                            <tr>
+                              <td colspan="7">
+                                <mdb-table-pagination [tableEl]="tableEl" [searchDataSource]="filteredArqueos"></mdb-table-pagination>
+                              </td>
+                            </tr>
+                        </tfoot>
                     </table>
                 </div>
             </div>
