--- a/src/app/cash-register/cash-register-edit/cash-register-edit.component.html
+++ b/src/app/cash-register/cash-register-edit/cash-register-edit.component.html
@@ -35,21 +35,13 @@
 
     <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pt-3 pb-3 pr-3 pl-3">
       <div class="row pl-2">
-        <label class="custom-control custom-checkbox">
-          <input type="checkbox" formControlName="available" class="custom-control-input" (change)="clickAvailable()">
-          <span class="custom-control-indicator"></span>
-          <span class="custom-control-description">Disponible</span>
-        </label>
+        <mdb-checkbox formControlName="available" (change)="clickAvailable()">{{ checkboxAvailableText }}</mdb-checkbox>
       </div>
     </div>
 
     <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pt-3 pb-3 pr-3 pl-3">
       <div class="row pl-2">
-        <label class="custom-control custom-checkbox">
-          <input type="checkbox" formControlName="default" class="custom-control-input">
-          <span class="custom-control-indicator"></span>
-          <span class="custom-control-description">Caja por defecto</span>
-        </label>
+        <mdb-checkbox formControlName="default">{{ checkboxDefaultText }}</mdb-checkbox>
       </div>
     </div>
 
