--- a/src/app/client/client-new/client-new.component.html
+++ b/src/app/client/client-new/client-new.component.html
@@ -67,9 +67,7 @@
     <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
       <div class="row pl-2">
         <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
-          <input mdbDeepDirective [(ngModel)]="newClient.enabledTransactions" type="checkbox" name="checkEnabledTransactions"
-            id="checkEnabledTransactions">
-          <label for="checkEnabledTransactions">Tiene Cta Cte</label>
+          <mdb-checkbox [(ngModel)]="newClient.enabledTransactions" name="checkEnabledTransactions"> {{ checkboxText }}</mdb-checkbox>
         </div>
       </div>
     </div>
