--- a/src/app/product/product-modify/product-modify.component.html
+++ b/src/app/product/product-modify/product-modify.component.html
@@ -82,11 +82,7 @@
           </div>        
 
           <div class="form-group">
-            <label class="custom-control custom-checkbox">
-              <input type="checkbox" formControlName="available" class="custom-control-input">
-              <span class="custom-control-indicator"></span>
-              <span class="custom-control-description">Disponible</span>
-            </label>
+            <mdb-checkbox formControlName="available"> {{ checkboxAvailableText }}</mdb-checkbox>
           </div>
 
         </div> 
