--- a/src/app/size/size-new/size-new.component.html
+++ b/src/app/size/size-new/size-new.component.html
@@ -47,8 +47,7 @@
     <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
       <div class="row pl-2">
         <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
-            <input mdbDeepDirective formControlName="available" type="checkbox" id="checkDisponible">
-            <label for="checkDisponible">Disponible</label>
+          <mdb-checkbox formControlName="available"> {{ checkboxAvailableText }}</mdb-checkbox>
         </div>
       </div>
     </div>
