--- a/src/app/order/order-new/order-new.component.scss
+++ b/src/app/order/order-new/order-new.component.scss
@@ -215,3 +215,13 @@
 .productPrice{
     padding-bottom: .65rem;
 }
+
+.selectSizeAndOptionsLabel{
+    padding-top: 2.5rem!important;
+}
+
+.footerButtons{
+    padding-right: 1rem;
+    padding-bottom: 1rem;
+    margin-left:30%;
+}
